# hexagotchi

./: .gitignore  .gitmodules  40  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Makefile  PROJECT_STATE.mx  README.md  assets.rres  assets_manifest.txt  build-alt.sh  build-desktop.bat  build-scene-editor.bat  build-scene-editor.sh  build-web.bat  build-web.sh  scene-editor.bat
docs/: GAME_DESIGN.mx  GOTCHI_SCREEN_BUTTONS.mx  GOTCHI_SYSTEM.mx  PROJECT_STATE.mx  SCENARIO_SYSTEM.mx  SCENE_RENDERING.mx  dev_notes_and_todo.txt
docs/handoff/: TIER1_BASE_GAME_HANDOFF.mx  TIER2_THEME_HANDOFF.mx  TIER3_HEXBOARD_HANDOFF.mx  todo_overview.mx
release/rc1/web/: index.js  index.wasm
release/rc2/web/: index.html  index.js
release/rc3/web/: index.wasm
release/rc4/web/: index.js  index.wasm
saves/: save_0.json  save_2.json
src/: main.cpp
src/effects/: CityWindowEffect.cpp  CityWindowEffect.hpp  GrimeShader.cpp  GrimeShader.hpp  JetMesh.cpp  JetMesh.hpp  LitShader.cpp  LitShader.hpp  MeshBuilders.hpp  MoonEffect.cpp  MoonEffect.hpp  PortalBaseMesh.cpp  PortalBaseMesh.hpp  PortalEffect.cpp  PortalEffect.hpp  PortalRingMesh.cpp  PortalRingMesh.hpp  PortalShader.cpp  PortalShader.hpp  SchoolSkyEffect.cpp  SchoolSkyEffect.hpp  StarfieldEffect.cpp  StarfieldEffect.hpp  SunEffect.cpp  SunEffect.hpp  TherapistWindowEffect.cpp  TherapistWindowEffect.hpp  TitleScrollShader.cpp  TitleScrollShader.hpp  TomagotchiToyMesh.cpp  TomagotchiToyMesh.hpp  UnlitShader.cpp  UnlitShader.hpp  VehicleMesh.cpp  VehicleMesh.hpp
src/engine/: AssetPack.cpp  AssetPack.hpp  AudioManager.cpp  AudioManager.hpp  Button.cpp  Button.hpp  Config.cpp  Config.hpp  DialogBox.cpp  DialogBox.hpp  GameConstants.hpp  GameState.cpp  GameState.h  GotchiDialogBox.cpp  GotchiDialogBox.hpp  HexPathFinder.cpp  HexPathFinder.hpp  HexTile.cpp  HexTile.hpp  HexWorld.cpp  HexWorld.hpp  Item.hpp  SaveManager.cpp  SaveManager.h  SaveWiring.h  Scene.cpp  Scene.hpp  SceneActor.cpp  SceneActor.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneDebugCamera.hpp  SceneEffect.hpp  SceneInputHandler.cpp  SceneInputHandler.hpp  SceneManager.cpp  SceneManager.hpp  SpriteLoader.cpp  SpriteLoader.hpp  TileType.cpp  (+3 more)
src/events/: EventBus.cpp  EventBus.h  EventType.h
src/flags/: Keys.h
src/game/: ApartmentScene.cpp  ApartmentScene.hpp  BossScene.cpp  BossScene.hpp  CharacterRegistry.cpp  CharacterRegistry.hpp  ControlsOverlay.cpp  ControlsOverlay.hpp  CreditsScene.cpp  CreditsScene.hpp  DeathScene.cpp  DeathScene.hpp  DeathSequencer.cpp  DeathSequencer.hpp  DialogSequences.hpp  DriversController.cpp  DriversController.hpp  EndingScene.cpp  EndingScene.hpp  ExploreGate.h  GameScene.cpp  GameScene.hpp  Gotchi.cpp  Gotchi.hpp  GotchiMood.cpp  GotchiMood.hpp  GotchiScene.cpp  GotchiScene.hpp  GotchiSim.cpp  GotchiSim.hpp  GotchiStats.cpp  GotchiStats.hpp  GotchiStatsScene.cpp  GotchiStatsScene.hpp  HappinessCheckpoints.hpp  HexBoard.cpp  HexBoard.hpp  HexItemOverlay.cpp  HexItemOverlay.hpp  HexViewScene.cpp  (+51 more)
tests/: TestExploreGate.cpp  TestGotchiSim.cpp  TestGrimeShader.cpp  TestMergeController.cpp  TestSaveManager  TestSaveManager.cpp  TestSaveWiring.cpp  TestStorySequencer.cpp
tools/: defringe.py  dump_glb.py  export_glb.cpp  gen_mesh_from_dump.py  pack_assets.cpp  pack_assets.py  pack_assets.sh  scene_editor.cpp  screenshot.sh  validate_glb.py
web/: shell.html
